[tool.poetry]
name = "monkeychain"
version = "0.1.0"
description = "A toy blockhain. Only for Monkeys"
authors = ["Joaquin Pereyra <joaquinlpereyra@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"

[tool.poetry.scripts]
monkeychain = "monkeychain.cli:main"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
