[tool.poetry]
name = "monkeychain"
version = "0.1.0"
description = "A toy blockhain. Only for Monkeys"
authors = ["Joaquin Pereyra <joaquinlpereyra@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
Flask = "^1.1.2"
Flask-JSONRPC = "^1.1.0"
typing-extensions = "^3.7.4"
requests = "^2.25.1"

[tool.poetry.scripts]
monkeychain = "monkeychain.app:main"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
